# yours-x-lunarcore

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yours/app/: YoursApplication.kt
app/src/main/java/com/yours/app/camera/: SovereignCamera.kt
app/src/main/java/com/yours/app/crypto/: AnonymousHints.kt  BedrockCore.kt  ConstantRateCoverTraffic.kt  ConstantTimeGF256.kt  HardenedKeyDerivation.kt  HardenedRecovery.kt  HardwareSecurityModule.kt  PostQuantumSignatures.kt  RotatingDeviceKey.kt
app/src/main/java/com/yours/app/identity/: Contact.kt  IdentityManager.kt  QuantumSignature.kt
app/src/main/java/com/yours/app/mesh/: EncryptedSerialChannel.kt  KissTransport.kt  LoRaSerialProtocol.kt  MeshCoreAdapter.kt  MeshCoreBleScanner.kt  MeshCoreBleTransport.kt  MeshCoreSerialTransport.kt  MeshCoreTcpTransport.kt  MeshCoreTransport.kt  MeshtasticAdapter.kt  MeshtasticProtobuf.kt  ReticulumAdapter.kt  UniversalMesh.kt
app/src/main/java/com/yours/app/messaging/: BlindedHints.kt  CoverTrafficScheduler.kt  EncryptedGarlicBundling.kt  GarlicBundling.kt  LunarCircuitManager.kt  LunarSession.kt  Message.kt  MessageManager.kt  MessagePool.kt  MessageStorage.kt  PoissonTrafficScheduler.kt  ReplayProtection.kt  StrictUnidirectionalTunnels.kt  UnidirectionalTunnels.kt
app/src/main/java/com/yours/app/security/: AuthPreferences.kt  Bip39Wordlist.kt  DeviceLiberation.kt  HumanCentricAuth.kt  NetworkSafetyChecker.kt  OpsecManager.kt  SecureDeviceKey.kt  SecurityGate.kt  SigilManager.kt  SovereigntyScanner.kt  ThreatDetector.kt  UnifiedAuthManager.kt
app/src/main/java/com/yours/app/ui/: MainActivity.kt
app/src/main/java/com/yours/app/vault/: Artifact.kt  (+3 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml  usb_device_filter.xml
bedrock-core/: Cargo.toml
bedrock-core/src/: bip39.rs  cover_traffic.rs  device.rs  duress.rs  error.rs  lib.rs  nullifier.rs  onion.rs  pedersen.rs  recovery.rs  ring_sig.rs  schnorr.rs  stego.rs
bedrock-core/src/credentials/: bbs_plus.rs  device_binding.rs  mod.rs  schnorr.rs
bedrock-core/src/lora/: mock.rs  mod.rs  serial.rs  transport.rs
bedrock-core/src/lunar/: hedged_kem.rs  mesh_credentials.rs  mod.rs  packet.rs  quantum_session.rs  routing.rs  session.rs
bedrock-core/src/mesh_identity/: fuzzy_tag.rs  mod.rs  node_identity.rs
bedrock-core/src/pairing/: bls12_381.rs  hash_to_curve.rs  mod.rs
bedrock-core/src/tokens/: mod.rs  privacy_pass.rs  rate_limiter.rs  voprf.rs
(+18 files in other folders)
